--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "@capacitor/core": "^7.0.0",
     "@capacitor/haptics": "^7.0.0",
     "@capacitor/keyboard": "^7.0.0",
-    "@capacitor/status-bar": "^7.0.0",
+    "@capacitor/status-bar": "^7.0.3",
     "@ionic/angular": "^8.0.0",
     "ionicons": "^7.0.0",
+    "jetifier": "^2.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
