--- a/package.json
+++ b/package.json
@@ -21,13 +21,18 @@
     "@angular/platform-browser": "^20.0.0",
     "@angular/platform-browser-dynamic": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "@awesome-cordova-plugins/sqlite": "^8.1.0",
+    "@capacitor-community/sqlite": "^7.0.2",
     "@capacitor/android": "7.4.3",
     "@capacitor/app": "^7.0.0",
     "@capacitor/core": "^7.0.0",
     "@capacitor/haptics": "^7.0.0",
     "@capacitor/keyboard": "^7.0.0",
+    "@capacitor/preferences": "^7.0.2",
+    "@capacitor/splash-screen": "^7.0.3",
     "@capacitor/status-bar": "^7.0.3",
     "@ionic/angular": "^8.0.0",
+    "cordova-sqlite-storage": "^7.0.0",
     "ionicons": "^7.0.0",
     "jetifier": "^2.0.0",
     "rxjs": "~7.8.0",
